Add cosmetic changes to meme it UPS
Change to do to done.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/corner.css">
-    <title>JUST DO IT</title>
+    <title>WHATS_DONE_IS_DONE</title>
 
 </head>
 
@@ -26,13 +26,13 @@
             <div class="light-theme theme-selector"></div>
             <div class="darker-theme theme-selector"></div>
         </div>
-        <h1 id="title">Just do it.<div id="border"></div></h1>
+        <h1 id="title">What's done is done.<div id="border"></div></h1>
     </div>
 
   <div id="form">
         <form>
             <input class="todo-input" type="text" placeholder="Add a task.">
-            <button class="todo-btn" type="submit">I Got This!</button>
+            <button class="todo-btn" type="submit">You done.</button>
         </form>
     </div>
 
